[feat/feat-stats-page] Página de Estatísticas finalizada. Junto disso, foram feitos alguns ajustes na responsividade e em algumas estiliazção.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="" />
     <link rel="icon" type="image/svg+xml" href="/dogs.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#fb1" />
+    <meta name="description" content="Dogs - Rede social para cachorros." />
     <link rel="stylesheet" href="./public/index.css" />
-    <title>Vite + React</title>
+    <title>Dogs</title>
   </head>
   <body>
     <div id="root"></div>
